Fixes overflow bug in transaction panels

--- a/src/components/panel/Panel.scss
+++ b/src/components/panel/Panel.scss
@@ -69,7 +69,7 @@
   margin: 12px 0 !important;
   padding: 12px;
   height: auto !important;
-  p {
+  div {
     display: inline-block;
     word-break: break-word;
   }
